# mappings-sphere-cube

./: CMakeLists.txt  LICENSE  README  README.md  analyzer.cpp  common.hpp  pdfplot.cpp  pdfplot.hpp  plotter.cpp  plotter.qrc  pngvis.cpp  pngvis.hpp  precision-test.cpp
libspherecube/: adjgnomonic.hpp  algebraic.hpp  contcube.hpp  everitt.hpp  gnomonic.hpp  healpix.hpp  logistic.hpp  nowell.hpp  outerra.hpp  poly5.hpp  qsc.hpp  smoothstep.hpp  spherecube.hpp  tangens.hpp  tanh.hpp  unicube.hpp
